1) Modified the change button, submit and cancel tags from divs to a buttons to allow for ease of keyboard input tabbing The task form is much more tab friendly, not counting the date picker. 2) Changed the tab index of the readonly date input so the keyboard does not tab into it. 3) Fixed a bug in TaskForm.prototype.areAllTheReadOnlyInputsValid caused by not passing along this to forEach. 4) Made the form focus on taskName input on expand amd ensure that date picker calendars are collapsed when the form is closed (with submit or the cancel button). 5) Fixed bug in TaskForm.prototype.isDateInputValid caused by specifying greater than instead of greater than or equal to. 6) Changed the code in TaskForm.prototype.getUserData from relying on indexes to using the name attributes to construct the userData object.

--- a/assets/task-form.css
+++ b/assets/task-form.css
@@ -145,6 +145,7 @@ form .date .input-container .change-button{
   margin-right: 15px;
   width: 50%;
   background: #ff0000;
+  color: #ffffff;
 }
 form .date-picker {
   height: 0%;
@@ -176,7 +177,7 @@ form .button-container{
   align-items: center;
   height: 10%;
 }
-form .button-container div{
+form .button-container button{
   border: 1px black solid;
   display: flex;
   border-radius: 5%;
@@ -185,6 +186,7 @@ form .button-container div{
   height: 67%;
   width: 40%;
   background: #008000;
+  color: #ffffff;
 }
 @media screen and (min-width: 375px) and (max-width: 760px){
   .tasklist{
